# service/DogTabService.js
@@ -71,89 +71,6 @@ exports.dogtabsGET = function() {
 
 
 /**
- * Delete own DogTab by ID
- * FR2 - The logged-in user must be able edit the dog tabs they already created.  <br>
- *
- * dogTabID Long Dog tab's ID to delete
- * no response value expected for this operation
- **/
-exports.dogtabsOwnDogTabIDDELETE = function(dogTabID) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Edit own DogTab by ID
- * FR2 - The logged-in user must be able edit the dog tabs they already created. <br>
- *
- * body DogTabsEdit Information needed to edit a DogTab
- * dogTabID Long Dog tab's ID to edit
- * no response value expected for this operation
- **/
-exports.dogtabsOwnDogTabIDPUT = function(body,dogTabID) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * Edit own DogTab by ID
- * FR2 - The logged-in user must be able edit the dog tabs they already created. <br>
- *
- * body DogTabsEdit Information needed to edit a DogTab
- * dogTabID Long Dog tab's ID to edit
- * no response value expected for this operation
- **/
-exports.dogtabsOwnDogTabIDPUT = function(body,dogTabID) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
-
-/**
- * View all personal/own DogTabs
- * FR2 - The logged-in user must be able edit the dog tabs they already created.  <br> FR3 - The logged-in user must be able to see all the posted dog tabs. <br>
- *
- * returns List
- **/
-exports.dogtabsOwnGET = function() {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ {
-  "sex" : "Male",
-  "name" : "Rex",
-  "mainPhoto" : "",
-  "description" : "Rex seeks a home",
-  "location" : "Thessaloniki, Greece",
-  "dogTabID" : 1234567,
-  "otherPhotos" : [ "", "" ],
-  "birthDate" : "2000-01-23T04:56:07.000+00:00",
-  "breed" : "Bulldog"
-}, {
-  "sex" : "Male",
-  "name" : "Rex",
-  "mainPhoto" : "",
-  "description" : "Rex seeks a home",
-  "location" : "Thessaloniki, Greece",
-  "dogTabID" : 1234567,
-  "otherPhotos" : [ "", "" ],
-  "birthDate" : "2000-01-23T04:56:07.000+00:00",
-  "breed" : "Bulldog"
-} ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
  * Create new DogTab
  * FR1 - The logged-in user must be able to create a new dog tab, to put a dog up for adoption.  <br>
  *
